# linux

app_sdk_v2/: CMakeLists.txt  README.md  build.sh  sdk.txt  wifi.txt
app_sdk_v2/app1/: CMakeLists.txt  main.c
app_sdk_v2/app1/res/font/: font_conf.h
app_sdk_v2/app1/res/image/: image_conf.h
app_sdk_v2/app1/res/music/: music_conf.h
app_sdk_v2/app1/ui/: bg_bt_audio_img.h  output.h  page_alarm.c  page_alarm_dialog.c  page_city_setting.c  page_conf.h  page_main.c  page_seeting.c  page_time_setting.c  page_tomato_setting.c  page_wifi_setting.c  page_yingxiang_setting.c
app_sdk_v2/component/net/: http_manager.c  http_manager.h
app_sdk_v2/component/osal/: osal_thread.c
app_sdk_v2/component/wifi/: wpa_manager.c
app_sdk_v2/component/wifi/utils/: base_utils.c
app_sdk_v2/platform/x86linux/src/hal/: em_hal_audio.c
